# clean_rwkv7

./: .gitignore  LICENSE  pyproject.toml  test_rwkv7.py  train_llama.py  train_rwkv7.py
csrc/: wkv7_op.cpp  wkv7s_infer_op.cpp  wkv7s_infer_op.cu
src/: llama.py  rwkv7.py  rwkv7_wind.py  wkv7s_infer.py
